# qkrig

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
Scripts/: dispatch_usgs_krig_range_subdaily.sh  qkrig_ts_hourly.py  qkrig_ts_range_hourly.sh  replot_from_exports.py  run_qkrig_daily.sh  run_qkrig_hourly.sh  run_usgs_krig_hour.py  usgs_raw_to_daily_kv.py  usgs_raw_to_hourly_kv.py
configs/: usgsgaugekrig.yaml
notebooks/: usgsgaugekrig.ipynb  usgsgaugekrig_hourly_verify.ipynb
src/core/: base_krig.py  base_loader.py
src/interpolation/: usgs_krig.py
src/loaders/: usgs_loader.py
